made full screen drawable

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="" type="image/x-icon">
     <title>Excalidraw Clone</title>
 </head>
 <body>
-    <canvas id="drawingCanvas"></canvas>
+    <div id="canvasContainer">
+        <canvas id="drawingCanvas"></canvas>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
